--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,94 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
+  z-index: -2;
   /* выше установили ограничения для секции */
+}
+
+.link {
+  color: #2f80ed;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0px;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  z-index: -1;
+}
+.logo {
+  width: 183px;
+  height: 32px;
+}
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  background-image: url(../images/logo_place_header.svg);
+}
+
+.header__title {
+  width: 730px;
+  margin-left: 64px;
+  line-height:96px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom:30px;
+  left: 64px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+}
+.header__main-illustration {
+  position: absolute;
+  bottom:0px;
+  right: 0px;
+  width: 765px;
+  height: 608px;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+}
+
+.description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.two-columns{
+  display: flex;
+  flex-direction: row;
+}
+
+.brief {
+  width: 175px;
+  color: #2f80ed;
+  margin-top: 0;
+}
+
+.main-text {
+  width: 80%; 
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +110,191 @@
   margin-right: 0;
   margin-top: 80px;
 }
+.span-accent {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.paragraph {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal ;
+}
+.brief-title {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.digits {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.section-title {
+  width: 60%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  line-height:1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+.section-subtitle {
+  width: 60%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+
+  line-height:34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+}
+/* .cell{
+  
+  
+} */
+
+.cell_theme_light {
+  margin-top: 60px;
+  width: 250px;
+}
+.cell_theme_dark {
+  margin-top: 80px;
+  width: 210px;
+}
+
+
+.heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+}
+.feynman{
+  /* display: flex;
+  flex-wrap: wrap; */
+  height: 890px;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  background-color: #f2f2f2;
+  z-index: -2;
+}
+.feynman-img{
+  position: absolute;
+  z-index: -1;
+  width: 867px;
+  height: 687px;
+  bottom: 0;
+  left: 0;
+  background-image: url(../images/feynman.png);
+  background-size: cover;
+}
+.feynman-title{
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  
+}
+.feynman-subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 70px;
+  text-align: center;
+}
+.feynman-link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.kaufman {
+  position: relative;
+  background-color: black;
+  color: white;
+  z-index: -2;
+}
+
+.kaufman-title{
+  width: 648px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  padding-top: 90px;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  
+}
+.kaufman-subtitle{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  text-align: center;
+}
+.kaufman-triangle {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  color: white;
+  min-height: 350px;
+}
+.footer-column {
+  flex-basis: 711px;
+}
+/* div
+{
+  border: 1px solid red;
+} */
