--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,9 @@
   color: #2f80ed;
   text-decoration: none;
 }
+/* .header__link {
+
+} */
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -36,19 +39,23 @@
   background-color: #2f80ed;
   z-index: -1;
 }
+
 .logo {
   width: 183px;
   height: 32px;
 }
+
 .logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
 }
+
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
   background-image: url(../images/logo_place_header.svg);
 }
+
 .header__title {
   width: 730px;
   margin-left: 64px;
@@ -56,6 +63,7 @@
   font-size: 102px;
   font-weight: bold;
 }
+
 .header__subtitle {
   position: absolute;
   bottom:30px;
@@ -64,6 +72,7 @@
   line-height: 25px;
   font-size: 18px;
 }
+
 .header__main-illustration {
   position: absolute;
   bottom:0px;
@@ -73,6 +82,7 @@
   background-image: url(../images/header-image.png);
   background-size: cover;
 }
+
 .description {
   display: flex;
   justify-content: space-between;
@@ -82,22 +92,26 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .two-columns{
   display: flex;
   flex-direction: row;
 }
-.brief {
+
+.two-columns__brief {
   width: 175px;
   color: #2f80ed;
   margin-top: 0;
 }
-.main-text {
+
+.two-columns__main-text {
   width: 80%; 
   min-width: 784px;
   display: flex;
   flex-direction: column;
   margin-left: auto;
 }
+
 /* и элемента с модификатором вида ключ-значение */
 .table {
   display: flex;
@@ -107,109 +121,123 @@
   margin-right: auto;
   justify-content: space-between;
 }
+
 .table__cell_theme_dark {
-  width: 200px;
-  color: white;
+  width: 210px;
   margin-right: 0;
   margin-top: 80px;
+  margin-bottom: 0px;
 }
-/* .cell{
-} */
 
 .table__cell_theme_light {
   margin-top: 60px;
   width: 250px;
 }
-.table__cell_theme_dark {
-  margin-top: 80px;
-  width: 210px;
+
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.span-accent {
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+}
+
+/* .table__cell_theme_dark {
+  margin-top: 80px;
+  width: 210px;
+} */
+
+.two-columns__span-accent {
   margin-top: 30px;
   margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
-.paragraph {
+
+.two-columns__paragraph {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal ;
 }
+
 .brief-title {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
+
 .digits {
   display: flex;
   flex-wrap: wrap;
   margin-top: 100px;
   margin-bottom: 100px;
 }
+
 .section-title {
   margin-left: auto;
   margin-right: auto;
   text-align: center; 
   font-weight: bold;
 }
+
 .section-subtitle {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   font-weight: normal;
 }
+
 .section-title_theme_light {
   width: 60%;
-  line-height:1.15;
+  line-height: 1.15;
   font-size: 60px;
 }
+
 .section-subtitle_theme_light {
   width: 60%;
   margin-top: 20px;
-  line-height:34px;
+  line-height: 34px;
   font-size: 24px;
 }
+
 .section-title_theme_dark{
   width: 648px;
   line-height: 1.15;
   font-size: 60px;
   padding-top: 90px;
   margin-top: 0;
+  margin-bottom: 0;
 }
+
 .section-subtitle_theme_dark{
   line-height: 34px;
   font-size: 24px;
   margin-top: 20px;
+  margin-bottom: 0;
 }
 
-
-.heading{
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-}
-.text{
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  margin-top: 20px;
-}
 .feynman{
-  /* display: flex;
-  flex-wrap: wrap; */
   height: 890px;
   margin-top: 100px;
+  padding-top: 100px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   background-color: #f2f2f2;
   z-index: 0;
 }
-.feynman-img{
+
+.feynman__img{
   position: absolute;
   z-index: -1;
   width: 867px;
@@ -219,7 +247,8 @@
   background-image: url(../images/feynman.png);
   background-size: cover;
 }
-.feynman-title{
+
+.feynman__title{
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -228,7 +257,8 @@
   margin-right: auto;
   text-align: center;
 }
-.feynman-subtitle{
+
+.feynman__subtitle{
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -237,7 +267,8 @@
   margin-top: 70px;
   text-align: center;
 }
-.feynman-link {
+
+.feynman__link {
   position: absolute;
   top: 50%;
   right: 48px;
@@ -245,36 +276,39 @@
   font-size: 36px;
   font-weight: normal;
 }
+
 .kaufman {
   position: relative;
   background-color: black;
   color: white;
   z-index: -2;
+  overflow: hidden;
 }
 
 .kaufman__triangle {
   position: absolute;
   z-index: -1;
   top: 0;
-  right: 0;
+  right: -210px;
   width: 877px;
   height: 877px;
   background-image: url(../images/kaufman-triangle.svg);
   background-size: cover;
 }
+
 .footer {
-  min-height: 600px;
   max-height: 756px;
   position: relative;
   align-items: center;
   background-color: #000000;
   z-index: 0;
-  /* display: flex;
-  background-color: black; */
   color: white;
   min-height: 350px;
 }
+
 .footer__columns {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -284,6 +318,7 @@
   z-index: 1;
   width: 90%;
 }
+
 .footer__column_copyright {
   z-index: -2;
   flex-basis: 711px;
@@ -314,6 +349,7 @@
   font-size: 18px;
   font-weight: bold;
 }
+
 .footer__column-links {
   display: flex;
   flex-direction: column;
@@ -324,10 +360,12 @@
   font-size: 18px;
   font-weight: normal;
 }
+
 .footer__column-link {
   color: white;
   text-decoration: none;
 }
+
 .link_type_icon{
   display: flex;
   flex-direction: column;
@@ -336,6 +374,7 @@
   justify-content:left;
   align-items: center;
 }
+
 .social-icon {
   height: 16px;
   width: 16px;
@@ -344,12 +383,15 @@
   background-repeat: no-repeat;
   margin-right: 10px;
 }
+
 .social-icon_name_facebook {
   background-image: url(../images/facebook_color_white.svg);  
 }
+
 .social-icon_name_vk {
   background-image: url(../images/vk_color_white.svg);
 }
+
 .social-icon_name_instagram {
   background-image: url(../images/instagram_color_white.svg);
 }
