--- a/styles/style.css
+++ b/styles/style.css
@@ -37,18 +37,24 @@
 .header__title {
   width: 730px;
   margin-left: 64px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
   line-height:96px;
   font-size: 102px;
   font-weight: bold;
+  z-index: 1;
 }
 
 .header__subtitle {
+  margin: 0;
   position: absolute;
   bottom:30px;
   left: 64px;
   width: 388px;
   line-height: 25px;
   font-size: 18px;
+  z-index: 1;
 }
 
 .header__main-illustration {
@@ -79,8 +85,8 @@
 }
 
 .feynman{
-  height: 890px;
-  margin-top: 100px;
+  min-height: 890px;
+  /* margin-top: 100px; */
   padding-top: 100px;
   margin-left: auto;
   margin-right: auto;
@@ -107,6 +113,8 @@
   font-weight: bold;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
+  margin-top: 0;
   text-align: center;
 }
 
@@ -117,6 +125,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 70px;
+  margin-bottom: 0;
   text-align: center;
 }
 
@@ -131,10 +140,12 @@
 
 .kaufman {
   position: relative;
-  background-color: black;
+  background-color: #1f1f1f;
   color: white;
-  z-index: -2;
+  z-index: 0;
   overflow: hidden;
+  margin: 0;
+  padding-bottom: 90px;
 }
 
 .kaufman__triangle {
@@ -152,7 +163,7 @@
   max-height: 756px;
   position: relative;
   align-items: center;
-  background-color: #000000;
+  background-color: #1f1f1f;
   z-index: 0;
   color: white;
   min-height: 350px;
@@ -171,17 +182,17 @@
   width: 90%;
 }
 
-.footer__column_copyright {
+.footer__column_content_copyright {
   z-index: -2;
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-/* .footer__column_info {
+/* .footer__column_content_info {
 } */
 
-/* .footer__column_social {
+/* .footer__column_content_social {
 } */
 .footer__author {
   line-height: 25px;
@@ -196,6 +207,7 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0;
 }
 
 .footer__column-links {
@@ -212,6 +224,23 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
+}
+
+.footer__column-link_type_icon{
+  display: flex;
+  flex-direction: column;
+  flex-direction: row;
+  justify-content:left;
+  align-items: center;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
+  margin-right: 10px;
 }
 
 .link {
@@ -244,6 +273,7 @@
   width: 175px;
   color: #2f80ed;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .two-columns__main-text {
@@ -255,19 +285,26 @@
 }
 
 .two-columns__span-accent {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  /* margin-top: 30px;
+  margin-bottom: 30px; */
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 .two-columns__paragraph {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+}
+.two-columns__paragraph:not(:last-child) {
+  /* margin-top: 0; */
+  margin-bottom: 30px;
+  /* line-height: 34px;
+  font-size: 24px;
+  font-weight: normal; */
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -287,7 +324,7 @@
   margin-bottom: 0px;
 }
 
-.table__cell_theme_light {
+.table__cell {
   margin-top: 60px;
   width: 250px;
 }
@@ -305,12 +342,13 @@
   font-size: 18px;
   font-weight: normal;
   margin-top: 20px;
+  margin-bottom: 0;
 }
 
-/* .table__cell_theme_dark {
+.table__cell_theme_dark {
   margin-top: 80px;
   width: 210px;
-} */
+}
 
 .brief-title {
   line-height: 1.2;
@@ -319,64 +357,62 @@
 }
 
 .section-title {
+  /* width: 60%; */
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
+  margin-top: 100px;
   text-align: center;
   font-weight: bold;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
 }
 
 .section-subtitle {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 0;
   text-align: center;
   font-weight: normal;
+  width: 60%;
+  /* margin-top: 20px; */
+  line-height: 34px;
+  font-size: 24px;
 }
 
-.section-title_theme_light {
+/* .section-title_theme_light {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
-}
+  margin-top: 100px;
 
-.section-subtitle_theme_light {
+} */
+
+/* .section-subtitle_theme_light {
   width: 60%;
   margin-top: 20px;
   line-height: 34px;
   font-size: 24px;
-}
+  margin-top: 20px;
+  margin-bottom: 0;
+} */
 
 .section-title_theme_dark{
   width: 648px;
-  line-height: 1.15;
-  font-size: 60px;
+  /* line-height: 1.15;
+  font-size: 60px; */
   padding-top: 90px;
   margin-top: 0;
-  margin-bottom: 0;
+  /* margin-bottom: 0; */
 }
 
 .section-subtitle_theme_dark{
-  line-height: 34px;
-  font-size: 24px;
-  margin-top: 20px;
+  /* line-height: 34px; */
+  /* font-size: 24px; */
+  /* margin-top: 20px; */
   margin-bottom: 0;
-}
-
-.link_type_icon{
-  display: flex;
-  flex-direction: column;
-  flex-direction: row;
-
-  justify-content:left;
-  align-items: center;
-}
-
-.social-icon {
-  height: 16px;
-  width: 16px;
-  background-size: contain;
-  background-position: left;
-  background-repeat: no-repeat;
-  margin-right: 10px;
 }
 
 .social-icon_name_facebook {
