--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,11 @@
   z-index: 0;
   /* выше установили ограничения для секции */
 }
-/* .header__link {
-} */
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -71,7 +74,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 0;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -84,10 +87,10 @@
   margin-bottom: 100px;
 }
 
-.feynman{
+.feynman {
+  display: flex;
+  flex-direction: column;
   min-height: 890px;
-  /* margin-top: 100px; */
-  padding-top: 100px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -95,7 +98,7 @@
   z-index: 0;
 }
 
-.feynman__img{
+.feynman__img {
   position: absolute;
   z-index: -1;
   width: 867px;
@@ -106,7 +109,7 @@
   background-size: cover;
 }
 
-.feynman__title{
+.feynman__title {
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -114,11 +117,11 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 100px;
   text-align: center;
 }
 
-.feynman__subtitle{
+.feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -136,6 +139,8 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .kaufman {
@@ -189,11 +194,7 @@
   flex-direction: column;
   justify-content: space-between;
 }
-/* .footer__column_content_info {
-} */
 
-/* .footer__column_content_social {
-} */
 .footer__author {
   line-height: 25px;
   font-size: 18px;
@@ -201,8 +202,7 @@
   margin-top: 18px;
   margin-bottom: 18px;
 }
-/* .footer__column {
-} */
+
 .footer__column-heading{
   line-height: 30px;
   font-size: 18px;
@@ -243,11 +243,6 @@
   margin-right: 10px;
 }
 
-.link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
 .logo {
   width: 183px;
   height: 32px;
@@ -285,8 +280,6 @@
 }
 
 .two-columns__span-accent {
-  /* margin-top: 30px;
-  margin-bottom: 30px; */
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -299,22 +292,21 @@
   font-size: 24px;
   font-weight: normal;
 }
+
 .two-columns__paragraph:not(:last-child) {
-  /* margin-top: 0; */
   margin-bottom: 30px;
-  /* line-height: 34px;
-  font-size: 24px;
-  font-weight: normal; */
 }
 
-/* и элемента с модификатором вида ключ-значение */
 .table {
   display: flex;
   flex-wrap: wrap;
   width: 1100px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
   justify-content: space-between;
+  list-style-type: none;
 }
 
 .table__cell_theme_dark {
@@ -329,7 +321,7 @@
   width: 250px;
 }
 
-.table__heading{
+.table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
@@ -337,7 +329,7 @@
   margin-bottom: 0;
 }
 
-.table__text{
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -357,11 +349,10 @@
 }
 
 .section-title {
-  /* width: 60%; */
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 100px;
+  margin-top: 0;
   text-align: center;
   font-weight: bold;
   width: 60%;
@@ -377,42 +368,14 @@
   text-align: center;
   font-weight: normal;
   width: 60%;
-  /* margin-top: 20px; */
   line-height: 34px;
   font-size: 24px;
 }
 
-/* .section-title_theme_light {
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  margin-top: 100px;
-
-} */
-
-/* .section-subtitle_theme_light {
-  width: 60%;
-  margin-top: 20px;
-  line-height: 34px;
-  font-size: 24px;
-  margin-top: 20px;
-  margin-bottom: 0;
-} */
-
-.section-title_theme_dark{
+.section-title_theme_dark {
   width: 648px;
-  /* line-height: 1.15;
-  font-size: 60px; */
   padding-top: 90px;
   margin-top: 0;
-  /* margin-bottom: 0; */
-}
-
-.section-subtitle_theme_dark{
-  /* line-height: 34px; */
-  /* font-size: 24px; */
-  /* margin-top: 20px; */
-  margin-bottom: 0;
 }
 
 .social-icon_name_facebook {
