--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -34,7 +35,7 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  z-index: -1;
+  z-index: 0;
 }
 
 .header__title {
@@ -46,7 +47,7 @@
   line-height:96px;
   font-size: 102px;
   font-weight: bold;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -57,17 +58,18 @@
   width: 388px;
   line-height: 25px;
   font-size: 18px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__main-illustration {
   position: absolute;
-  bottom:0px;
+  bottom: 0px;
   right: 0px;
   width: 765px;
   height: 608px;
   background-image: url(../images/header-image.png);
   background-size: cover;
+  z-index: 1;
 }
 
 .description {
@@ -100,7 +102,7 @@
 
 .feynman__img {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   width: 867px;
   height: 637px;
   bottom: 0;
@@ -119,6 +121,7 @@
   margin-bottom: 0;
   margin-top: 100px;
   text-align: center;
+  z-index: 2;
 }
 
 .feynman__subtitle {
@@ -130,6 +133,7 @@
   margin-top: 70px;
   margin-bottom: 0;
   text-align: center;
+  z-index: 2;
 }
 
 .feynman__link {
@@ -141,6 +145,7 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+  z-index: 2;
 }
 
 .kaufman {
@@ -155,7 +160,7 @@
 
 .kaufman__triangle {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   top: 0;
   right: -210px;
   width: 877px;
@@ -188,7 +193,6 @@
 }
 
 .footer__column_content_copyright {
-  z-index: -2;
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
@@ -203,7 +207,7 @@
   margin-bottom: 18px;
 }
 
-.footer__column-heading{
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -226,7 +230,7 @@
   text-decoration: none;
 }
 
-.footer__column-link_type_icon{
+.footer__column-link_type_icon {
   display: flex;
   flex-direction: column;
   flex-direction: row;
@@ -259,7 +263,7 @@
   background-image: url(../images/logo_place_header.svg);
 }
 
-.two-columns{
+.two-columns {
   display: flex;
   flex-direction: row;
 }
@@ -307,6 +311,14 @@
   margin-bottom: 0;
   justify-content: space-between;
   list-style-type: none;
+  padding-left: 0;
+  z-index: 2;
+}
+
+.table__cell {
+  margin-top: 60px;
+  width: 250px;
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
@@ -314,11 +326,6 @@
   margin-right: 0;
   margin-top: 80px;
   margin-bottom: 0px;
-}
-
-.table__cell {
-  margin-top: 60px;
-  width: 250px;
 }
 
 .table__heading {
@@ -353,6 +360,8 @@
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
+  z-index: 2;
+  position: relative;
 }
 
 .section-subtitle {
@@ -365,22 +374,25 @@
   width: 60%;
   line-height: 34px;
   font-size: 24px;
+  z-index: 2;
+  position: relative;
 }
 
 .section-title_theme_dark {
   width: 648px;
   padding-top: 90px;
   margin-top: 0;
+  z-index: 2;
 }
 
-.social-icon_name_facebook {
-  background-image: url(../images/facebook_color_white.svg);  
+.footer__social-icon_name_facebook {
+  background-image: url(../images/facebook_color_white.svg);
 }
 
-.social-icon_name_vk {
+.footer__social-icon_name_vk {
   background-image: url(../images/vk_color_white.svg);
 }
 
-.social-icon_name_instagram {
+.footer__social-icon_name_instagram {
   background-image: url(../images/instagram_color_white.svg);
 }
