--- a/styles/style.css
+++ b/styles/style.css
@@ -170,9 +170,10 @@
 }
 
 .footer {
+  display: flex;
   max-height: 756px;
   position: relative;
-  align-items: center;
+  justify-content: space-between;
   background-color: #1f1f1f;
   z-index: 0;
   color: white;
