--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,4 +1,10 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
+  opacity: 1;
+}
+
+.footer__column-link:hover {
+  transition: opacity 0.5s ease;
+  opacity: 0.6;
 }
