--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,4 +2,10 @@
   color: #2f80ed;
   text-decoration: none;
   z-index: 1;
+  opacity: 1;
+}
+
+.header__link:hover {
+  transition: opacity 0.5s ease;
+  opacity: 0.6;
 }
