--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,24 @@
+@import url(../vendor/normalize.css);
+
 @import url(../blocks/root/root.css);
+
+@import url(../blocks/rotation/rotation.css);
+
+@import url(../blocks/techniques/techniques.css);
+
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__image/_name/cards__image_name_attention.css);
+@import url(../blocks/cards/__image/_name/cards__image_name_recall.css);
+@import url(../blocks/cards/__image/_name/cards__image_name_interliving.css);
+@import url(../blocks/cards/__image/_name/cards__image_name_question.css);
+@import url(../blocks/cards/__image/_name/cards__image_name_competence.css);
+
+
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -30,6 +50,13 @@
 @import url(../blocks/logo/_place/logo_place_footer.css);
 
 @import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+
+@import url(../blocks/iframes/iframes.css);
+@import url(../blocks/iframes/__iframe/iframes__iframe.css);
+
+@import url(../blocks/video/video.css);
+/* @import url(../blocks/section-title/_theme/section-title_theme_techniques.css); */
+
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 
