--- a/blocks/description/description.css
+++ b/blocks/description/description.css
@@ -1,9 +1,17 @@
 .description {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
   margin-top: 100px;
   margin-bottom: 0;
   width: 80%;
   margin-left: auto;
+  margin-right: auto; */
+  display: flex;
+  flex-direction: column;
+  /* min-height: 890px; */
+  margin-left: auto;
   margin-right: auto;
+  position: relative;
+  /* background-color: #f2f2f2; */
+  z-index: 0;
 }
