--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 100px;
   text-align: center;
   font-weight: bold;
   width: 60%;
