--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 0;
   width: 80%;
   margin-left: auto;
