--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,4 +1,11 @@
 .two-columns {
   display: flex;
   flex-direction: row;
+
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-bottom: 0;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
