--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -2,9 +2,11 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 0;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  z-index: 1;
 }
