--- a/pages/index.css
+++ b/pages/index.css
@@ -15,10 +15,8 @@
 @import url(../blocks/cards/__image/_name/cards__image_name_question.css);
 @import url(../blocks/cards/__image/_name/cards__image_name_competence.css);
 
-
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__description/cards__description.css);
-
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -49,15 +47,35 @@
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/logo/_place/logo_place_footer.css);
 
-@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
-
 @import url(../blocks/iframes/iframes.css);
 @import url(../blocks/iframes/__iframe/iframes__iframe.css);
 
 @import url(../blocks/video/video.css);
-/* @import url(../blocks/section-title/_theme/section-title_theme_techniques.css); */
+
+@import url(../blocks/oakley/oakley.css);
+
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__title/khan__title.css);
+
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/__logo/_name/resources__logo_name_arzamas.css);
+@import url(../blocks/resources/__logo/_name/resources__logo_name_n1.css);
+@import url(../blocks/resources/__logo/_name/resources__logo_name_polka.css);
+@import url(../blocks/resources/__logo/_name/resources__logo_name_strelka.css);
 
 @import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+
 @import url(../blocks/section-subtitle/section-subtitle.css);
 
 @import url(../blocks/table/table.css);
