--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,13 +1,12 @@
 .cards {
   width: 920px;
-
-
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
-  /* margin-top: 100px; */
+  margin-top: 0;
   margin-bottom: 0;
-
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
+  list-style-type: none;
 }
