--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -2,9 +2,14 @@
   color: white;
   text-decoration: none;
   opacity: 1;
+  display: flex;
+  flex-direction: column;
+  flex-direction: row;
+  justify-content:left;
+  align-items: center;
+  transition: opacity 0.5s ease;
 }
 
 .footer__column-link:hover {
-  transition: opacity 0.5s ease;
   opacity: 0.6;
 }
