--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,7 +1,7 @@
 .oakley {
   display: flex;
   flex-direction: column;
-  margin-top: -60px;
+  margin-top: 0;
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
