--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 0;
-  margin-bottom: 0;
-  width: 80%;
+  margin-bottom: -60px;
+  width: 1050px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
